--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,20 +12,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrpyt": "^2.0.0",
-    "bcrypt": "^5.1.1",
-    "cloudinary": "^2.5.1",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^4.21.2",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.13.0",
-    "mongoose": "^8.9.5",
-    "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.9",
-    "razorpay": "^2.9.5",
-    "stripe": "^17.6.0",
-    "validator": "^13.12.0"
+    "mongodb": "^6.19.0",
+    "mongoose": "^8.18.0",
+    "multer": "^2.0.2",
+    "nodemon": "^3.1.10",
+    "socket.io": "^4.8.1",
+    "validator": "^13.15.15"
   }
 }
