--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "emoji-picker-react": "^4.13.2",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.513.0",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
